; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_news.c_news_recv.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_news.c_news_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rbuf_head = common dso_local global i64 0, align 8
@rbuf_tail = common dso_local global i64 0, align 8
@rbuf = common dso_local global i32* null, align 8
@RBUF_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @news_recv() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  %3 = load i64, i64* @rbuf_head, align 8
  %4 = load i64, i64* @rbuf_tail, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %17

7:                                                ; preds = %0
  %8 = load i32*, i32** @rbuf, align 8
  %9 = load i64, i64* @rbuf_tail, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %2, align 4
  %12 = load i64, i64* @rbuf_tail, align 8
  %13 = add i64 %12, 1
  %14 = load i64, i64* @RBUF_SIZE, align 8
  %15 = urem i64 %13, %14
  store i64 %15, i64* @rbuf_tail, align 8
  %16 = load i32, i32* %2, align 4
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %7, %6
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
